# agents

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  smoke_test.py
agentkit/: README.md  __init__.py  builder.py  chat_completions.py  harness.py  repl.py  responses_mode.py
